Change all fonts to sans-serif, center webpage headers, reword subtitle

--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,13 @@
     height: auto;
     width: 500px;
 }
+
+.page-title,
+.ingredients,
+.steps {
+    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.page-title {
+    text-align: center;
+}
