--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+* {
+    font-family: sans-serif;
+}
+
+h1,
+h3 {
+    text-align: center;
+    background-color: #c2c2c2;
+}
+
+#home-button {
+    text-align: left;
+    font-size: 12px;
+}
+
 .image-lasagna {
     height: 500px;
     width: auto;
@@ -11,16 +26,6 @@
 .image-garlicbread {
     height: auto;
     width: 500px;
-}
-
-* {
-    font-family: sans-serif;
-}
-
-h1,
-h3 {
-    text-align: center;
-    background-color: #c2c2c2;
 }
 
 .image-caption {
